--- a/app/assets/stylesheets/photos/new.html.css
+++ b/app/assets/stylesheets/photos/new.html.css
@@ -125,22 +125,6 @@ margin: 7vh 0px;
   border: none;
 }
 
-/* 600px〜959px：タブレット
------------------------------- */
-@media screen and (min-width:600px) and (max-width:959px) {
- 
- 
-}
- 
- 
-/* 480px〜599px：SP横
------------------------------- */
-@media screen and (min-width:480px) and (max-width:599px) { 
- 
- 
-}
- 
- 
 /* 〜479px：スマートフォン縦
 ------------------------------ */
 @media screen and (max-width:479px) { 
@@ -154,7 +138,7 @@ margin: 7vh 0px;
  }
  
  .photo-title{
-   width: 100%;
+   width: calc(100% - calc(20% + 20px ));
  }
 
  .post-new-btn{
@@ -168,7 +152,7 @@ margin: 7vh 0px;
  .post-photo-upload{
    margin-bottom: 10px;
  }
- 
+
 
 
 }
