--- a/app/assets/stylesheets/shared/homes_header.css
+++ b/app/assets/stylesheets/shared/homes_header.css
@@ -9,6 +9,13 @@
   left: 30px;
 }
 
+.home-photo-icon{
+  height: 90%;
+  margin-top: 10px;
+  position: absolute;
+  left: 30px;
+}
+
 .photoroke-icon-photo{
   height: 100%;
 }
@@ -65,22 +72,6 @@
   margin-left: 12px;
 }
 
-/* 600px〜959px：タブレット
------------------------------- */
-@media screen and (min-width:600px) and (max-width:959px) {
- 
- 
-}
- 
- 
-/* 480px〜599px：SP横
------------------------------- */
-@media screen and (min-width:480px) and (max-width:599px) { 
- 
- 
-}
- 
- 
 /* 〜479px：スマートフォン縦
 ------------------------------ */
 @media screen and (max-width:479px) { 
@@ -104,6 +95,10 @@
  .gest-container{
   position: static;
   right: 0px;
+ }
+
+ .home-photo-icon{
+  position: initial;
  }
  
 }
