--- a/app/assets/stylesheets/user/mypage.css
+++ b/app/assets/stylesheets/user/mypage.css
@@ -29,6 +29,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  border: solid 2px;
 }
 
 .user-header-profile {
@@ -92,34 +93,18 @@
   border: 2px solid;
 }
 
-/* 600px〜959px：タブレット
------------------------------- */
-@media screen and (min-width:600px) and (max-width:959px) {
- 
- 
-}
- 
- 
-/* 480px〜599px：SP横
------------------------------- */
-@media screen and (min-width:480px) and (max-width:599px) { 
- 
- 
-}
- 
- 
 /* 〜479px：スマートフォン縦
 ------------------------------ */
 @media screen and (max-width:479px) { 
   .user-account-container{
-    height: initial;
+    height: 13vh;
     padding-top: 5vh;
     width: 100vw;
   }
 
   .user-header-icon{
-    width: 85px;
-    height: 85px;
+    width: 80px;
+    height: 80px;
   }
   
   .user-header-profile{
