--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -5,7 +5,7 @@
       <div class='user-icon-container'>
         <div class='post-user-icon'>
           <% if @photo.user.avatar.attached?%>
-          <%= image_tag @photo.user.avatar, class:'avatar'%>
+          <%= image_tag @photo.user.avatar.variant(gravity: :center, resize:"80x80^", crop:"80x80+0+0").processed, class:'photo-avatar'%>
           <%else%>
           <%= image_tag ("avatar.png"), class:'avatar'%>
           <% end %>
