--- a/app/views/shared/_homes_header.html.erb
+++ b/app/views/shared/_homes_header.html.erb
@@ -1,7 +1,7 @@
 <div class='top-header'>
 
   <%#ロゴの情報が入る%>
-  <div class='photoroke-icon'>
+  <div class='home-photo-icon'>
     <%= link_to image_tag('photo_roke64.png', class: 'photoroke-icon-photo'), root_path %>
   </div>
 
