--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -1,13 +1,20 @@
 <%= render 'shared/post_header'%>
 
 <div class='followers-user-wrapper'>
-  <% @users.each do |user| %>
-  <div class='followers-user-container'>
-    <div class='followers-user-icon'>
+  <div class='card-wrapper'>
+    <% @users.each do |user| %>
+    <div class='followers-user-container'>
+      <div class='followers-user-icon'>
+        <% if user.avatar.attached?%>
+        <%= image_tag user.avatar.variant(gravity: :center, resize:"80x80^", crop:"80x80+0+0").processed, class:'photo-avatar'%>
+        <%else%>
+        <%= image_tag ("avatar.png"), class:'avatar'%>
+        <% end %>
+      </div>
+      <div class ='follwores-name-container'>
+        <%= link_to user.nickname, user_path(user.id), class:"follwores-user-nickname"%>
+      </div>
     </div>
-    <div class ='follwores-name-container'>
-      <%= link_to user.nickname, user_path(user.id), class:"follwores-user-nickname"%>
-    </div>
+    <% end %>
   </div>
-  <% end %>
 </div>
