位置情報取得の時に値が出ないように記述

--- a/app/assets/stylesheets/photos/show.html.css
+++ b/app/assets/stylesheets/photos/show.html.css
@@ -109,6 +109,14 @@
   transform: translateY(4px);
   border-bottom: none;
 }
+
+.latitude-value{
+  display: none;
+}
+
+.longitude-value{
+  display: none;
+}
  
 /* 〜479px：スマートフォン縦
 ------------------------------ */
