--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -94,8 +94,8 @@
             <%# </div> %>
         </div>
         <div class="txt-margin">
-            <p>緯度：<span id="latitude">???</span><span>度</span></p>
-            <p>経度：<span id="longitude">???</span><span>度</span></p>
+            <span id="latitude" class='latitude-value'></span>
+            <span id="longitude" class='longitude-value'></span>
         </div>
       </div>
       <%= javascript_pack_tag 'photo/new' %>
